--- a/dtschapter03-starter-master/app/src/main/res/values/strings.xml
+++ b/dtschapter03-starter-master/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">DtsChapter03-starter</string>
+    <string name="sign_in_to_continue">Sign In to Continue</string>
+    <string name="enter_your_password">Enter Your Password</string>
 </resources>
