--- a/dtschapter04-starter-starter04/app/src/main/res/values/strings.xml
+++ b/dtschapter04-starter-starter04/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="confirm_password">Confirm Password</string>
     <string name="send_request">Send Request</string>
     <string name="change_password">Change Password</string>
+    <string name="registration">Registration</string>
 </resources>
